Fixed styling issue caused by previous fix with text overflow on code blocks.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ code {
     background-color: #303030;
     padding: 10px 20px;
     margin: 0 10px 0 0;
-    max-width: 250px;
+    max-width: 300px;
     border-radius: 5px;
     font-size: calc(12px + 0.5vw);
     color: lightgreen;
